--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,51 @@
-.Rproj.user
+data/
+R/
+reference/
+!lfs/reference/
+syncignore.d
+_minted-mci-derivation/
+babel/
+
 .Rhistory
+.RData
+*.Rout
 *.RData
-.Ruserdata
-.DS_Store
-*.Rproj
-manuscript.pdf
+*.rds
+
+*.html
+*.tar.gz
+
+# about manuscript
+*.aux
+*.dbj
+*.bbl
+*.bcf
+*.blg
+*.dvi
+*.fdb_latexmk
+*.fff
+*.fls
+*.idx
+*.ind
+*.ilg
 *.log
 *.out
-*.aux
-*.html
+*.swp
+*.synctex.gz
+*.toc
+*.ttt
+*.xml
+*.zip
+*-eps-converted-to.pdf
+.dropbox
+
+# compiled object
+*.o
+*.so
+
+# temp files
+.DS_Store
+.\#*
+\#*\#
+*.*~
+*~
